started posts activity

--- a/app/src/main/res/layout/content_posts.xml
+++ b/app/src/main/res/layout/content_posts.xml
@@ -1,26 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:fitsSystemWindows="true">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <pl.openrnd.multilevellistview.MultiLevelListView
+        android:id="@+id/listView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="56dp"
-        android:paddingLeft="24dp"
-        android:paddingRight="24dp">
+        android:layout_height="match_parent"
+        app:alwaysExtended="false"
+        app:nestType="multiple">
+    <include layout="@layout/data_item" />
+        />
 
-        <Spinner
-            android:id="@+id/spinner1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:background="@color/colorPrimaryDark"
-            android:dropDownWidth="match_parent"
-            android:spinnerMode="dropdown" />
+    </pl.openrnd.multilevellistview.MultiLevelListView>
 
-    </LinearLayout>
 </ScrollView>
