--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,11 +14,13 @@ android:fitsSystemWindows="true">
     android:descendantFocusability="beforeDescendants"
     android:focusableInTouchMode="true">
 
-    <ImageView android:src="@drawable/logo"
+    <ImageView
+        android:id="@+id/logo"
         android:layout_width="wrap_content"
         android:layout_height="72dp"
+        android:layout_gravity="center_horizontal"
         android:layout_marginBottom="24dp"
-        android:layout_gravity="center_horizontal" />
+        android:src="@drawable/logo" />
 
     <!-- Email Label -->
     <android.support.design.widget.TextInputLayout
@@ -29,7 +31,7 @@ android:fitsSystemWindows="true">
         <EditText android:id="@+id/input_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Username"
+            android:hint="@string/username"
             android:inputType="textPersonName"/>
     </android.support.design.widget.TextInputLayout>
 
@@ -43,7 +45,7 @@ android:fitsSystemWindows="true">
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
-            android:hint="Password"/>
+            android:hint="@string/password"/>
     </android.support.design.widget.TextInputLayout>
 
     <android.support.v7.widget.AppCompatButton
@@ -53,13 +55,13 @@ android:fitsSystemWindows="true">
         android:layout_marginTop="24dp"
         android:layout_marginBottom="24dp"
         android:padding="12dp"
-        android:text="Login"/>
+        android:text="@string/login"/>
 
     <TextView android:id="@+id/link_signup"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="56dp"
-        android:text="No account yet? Create one"
+        android:text="@string/no_account_yet_create_one"
         android:gravity="center"
         android:textSize="16dip"/>
 
