--- a/app/src/main/res/layout/data_item.xml
+++ b/app/src/main/res/layout/data_item.xml
@@ -2,7 +2,7 @@
 
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-
+    android:layout_marginTop="56dp"
     android:padding="@dimen/data_item_row_padding"
     android:layout_height="@dimen/data_item_row_height"
 
