my posts done, i think

--- a/app/src/main/res/layout/content_posts.xml
+++ b/app/src/main/res/layout/content_posts.xml
@@ -1,19 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+<ExpandableListView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:layout_marginTop="56dp"
-    android:fitsSystemWindows="true">
-
-    <pl.openrnd.multilevellistview.MultiLevelListView
-        android:id="@+id/listView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:alwaysExtended="false"
-        app:nestType="multiple">
-        <include layout="@layout/data_item" />
-
-    </pl.openrnd.multilevellistview.MultiLevelListView>
-
-</ScrollView>
+    android:layout_marginTop="30dp"
+    android:id="@+id/expandableListView"
+    android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
+    android:divider="@android:color/darker_gray"
+    android:dividerHeight="0.5dp"/>
