--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,13 +2,5 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303f9f</color>
-    <color name="colorAccent">#FF4081</color>
-
-    <color name="level_0">#1abc9c</color>
-    <color name="level_1">#3498db</color>
-    <color name="level_2">#e67e22</color>
-    <color name="level_3">#8e44ad</color>
-    <color name="level_4">#f1c40f</color>
-    <color name="level_5">#2ecc71</color>
-    <color name="level_default">#000000</color>
+    <color name="colorAccent">#ff4081</color>
 </resources>
