--- a/app/src/main/res/layout/content_create_post.xml
+++ b/app/src/main/res/layout/content_create_post.xml
@@ -77,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="time"
+                android:inputType="datetime"
                 android:hint="@string/time"
                 android:textAlignment="center" />
         </android.support.design.widget.TextInputLayout>
