--- a/app/src/main/res/layout/content_location_option.xml
+++ b/app/src/main/res/layout/content_location_option.xml
@@ -2,6 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
@@ -25,7 +26,7 @@
             android:layout_weight="1">
 
             <RadioButton
-                android:id="@+id/radioButton4"
+                android:id="@+id/radioButton_location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -33,21 +34,21 @@
                 android:text="@string/location" />
 
             <RadioButton
-                android:id="@+id/radioButton3"
+                android:id="@+id/radioButton_wifi"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/wifi" />
 
             <RadioButton
-                android:id="@+id/radioButton2"
+                android:id="@+id/radioButton_bluetooth"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/bluetooth" />
 
             <RadioButton
-                android:id="@+id/radioButton"
+                android:id="@+id/radioButton_wifi_direct"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -55,10 +56,74 @@
 
         </RadioGroup>
 
-        <com.google.android.gms.maps.MapView
-            android:id="@+id/mapView"
+        <LinearLayout
+            android:id="@+id/layout_location"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:visibility="visible">
+
+            <com.mapbox.mapboxsdk.maps.MapView
+                android:id="@+id/mapView"
+                android:layout_width="match_parent"
+                android:layout_height="203dp"
+                mapbox:mapbox_cameraTargetLat="38.7378954"
+                mapbox:mapbox_cameraTargetLng="-9.1378972"
+                mapbox:mapbox_cameraZoom="15"
+                mapbox:mapbox_myLocation="true"
+                mapbox:mapbox_styleUrl="mapbox://styles/mapbox/streets-v10"
+                mapbox:mapbox_uiAttribution="false"
+                mapbox:mapbox_uiLogo="false" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/layout_wifi"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="WIFI_SSID"
+                android:textAlignment="center" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/layout_bluetooth"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="BLUETOOTH"
+                android:textAlignment="center" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/layout_wifi_direct"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="WIFI_DIRECT"
+                android:textAlignment="center" />
+        </LinearLayout>
 
     </LinearLayout>
 
