--- a/app/src/main/res/layout/content_location_option.xml
+++ b/app/src/main/res/layout/content_location_option.xml
@@ -110,7 +110,7 @@
             android:visibility="gone">
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/text_wifi"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="WIFI_SSID"
