--- a/LocMessApp/app/src/main/res/layout/profile_activity_view.xml
+++ b/LocMessApp/app/src/main/res/layout/profile_activity_view.xml
@@ -8,11 +8,6 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
-    <include
-        layout="@layout/app_bar_posts"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
@@ -20,5 +15,9 @@
         android:layout_gravity="start"
         app:menu="@menu/activity_posts_drawer" />
 
+    <include
+        layout="@layout/profile_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </android.support.v4.widget.DrawerLayout>
