--- a/LocMessApp/app/src/main/res/layout/profile_fragment_view.xml
+++ b/LocMessApp/app/src/main/res/layout/profile_fragment_view.xml
@@ -3,10 +3,10 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <FrameLayout
-        android:id="@+id/fragment_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="150dp"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:text="First Fragment"/>
 
 </LinearLayout>
