--- a/LocMessApp/app/src/main/res/layout/delete_popup.xml
+++ b/LocMessApp/app/src/main/res/layout/delete_popup.xml
@@ -6,8 +6,8 @@
     android:background="@android:color/background_light">
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_alignParentBottom="true"
         android:layout_margin="50dp"
         android:background="@android:color/darker_gray"
@@ -15,15 +15,16 @@
         >
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/textpop"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:text="Delete Cenas?"
-                android:layout_marginLeft="45dp"/>
+                android:layout_marginLeft="30dp"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
