--- a/LocMessApp/app/src/main/res/layout/content_restrition_option.xml
+++ b/LocMessApp/app/src/main/res/layout/content_restrition_option.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="pt.ulisboa.tecnico.cmov.locmess.RestritionOptionActivity"
+    tools:context="pt.ulisboa.tecnico.cmov.locmess.activities.RestritionOptionActivity"
     tools:showIn="@layout/activity_restrition_option">
 
     <LinearLayout
