--- a/LocMessApp/app/src/main/res/layout/activity_restrition_option.xml
+++ b/LocMessApp/app/src/main/res/layout/activity_restrition_option.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="pt.ulisboa.tecnico.cmov.locmess.RestritionOptionActivity">
+    tools:context="pt.ulisboa.tecnico.cmov.locmess.activities.RestritionOptionActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
