--- a/LocMessApp/app/src/main/res/layout/content_create_post.xml
+++ b/LocMessApp/app/src/main/res/layout/content_create_post.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="pt.ulisboa.tecnico.cmov.locmess.CreatePostActivity"
+    tools:context="pt.ulisboa.tecnico.cmov.locmess.activities.CreatePostActivity"
     tools:showIn="@layout/activity_create_post">
 
 
