--- a/LocMessApp/app/src/main/res/layout/content_location_option.xml
+++ b/LocMessApp/app/src/main/res/layout/content_location_option.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="pt.ulisboa.tecnico.cmov.locmess.LocationOptionActivity"
+    tools:context="pt.ulisboa.tecnico.cmov.locmess.activities.LocationOptionActivity"
     tools:showIn="@layout/activity_location_option">
 
     <LinearLayout
