--- a/LocMessApp/app/src/main/res/layout/profile_content.xml
+++ b/LocMessApp/app/src/main/res/layout/profile_content.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="pt.ulisboa.tecnico.cmov.locmess.ProfileActivity">
+    tools:context="pt.ulisboa.tecnico.cmov.locmess.activities.ProfileActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
