--- a/LocMessApp/app/src/main/res/layout/my_posts_list_group.xml
+++ b/LocMessApp/app/src/main/res/layout/my_posts_list_group.xml
@@ -5,22 +5,27 @@
     android:orientation="horizontal"
     android:gravity="center_vertical">
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
     <TextView
         android:id="@+id/text1"
-        android:textSize="20sp"
+        android:textSize="15dp"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_marginLeft="95dp" android:gravity="center_vertical"
+        android:layout_marginLeft="95dp"
+        android:gravity="center_vertical"
         android:text="TextView"
-        android:textColor = "#000000"/>
+        android:textColor ="#000000"/>
 
     <Button android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="95dp"
         android:focusable="false"
         android:text="Delete"
-        android:layout_alignParentRight="true"
-        />
+        android:layout_alignParentRight="true"/>
 
+    </LinearLayout>
 
 </RelativeLayout>
