--- a/LocMessApp/app/src/main/res/layout/profile_fragment_view.xml
+++ b/LocMessApp/app/src/main/res/layout/profile_fragment_view.xml
@@ -2,7 +2,7 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="300dp"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
+        android:layout_gravity="left"
         android:orientation="vertical"
         android:padding="8dp" >
 
@@ -10,50 +10,60 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_gravity="center"
-            android:layout_marginTop="48dp"
+            android:layout_marginTop="15dp"
             android:orientation="vertical"
-            android:padding="8dp" >
+            android:padding="8dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginLeft="20dp"
-                android:orientation="horizontal" >
+                android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/textView3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textStyle="bold"
+                    android:layout_marginTop="20dp"
+                    android:text="Contact: "
                     android:textColor="@android:color/primary_text_light"
-                    android:text="Contact: "/>
+                    android:textStyle="bold" />
 
-                <EditText
-                    android:id="@+id/account_contact"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@android:color/secondary_text_light"
-                    android:text="917494376"/>
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <EditText
+                        android:id="@+id/account_contact"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="917494376"
+                        android:textColor="@android:color/secondary_text_light" />
+                </android.support.design.widget.TextInputLayout>
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginLeft="20dp"
-                android:orientation="horizontal" >
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textStyle="bold"
+                    android:layout_marginTop="25dp"
+                    android:text="E-Mail: "
                     android:textColor="@android:color/primary_text_light"
-                    android:text="E-Mail: "/>
+                    android:textStyle="bold" />
 
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
                 <EditText
                     android:id="@+id/account_mail"
-                    android:layout_marginLeft="10dp"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
                     android:textColor="@android:color/secondary_text_light"
-                    android:text="mail@mail.mail"/>
+                    android:hint="mail@mail.mail" />
+                </android.support.design.widget.TextInputLayout>
 
             </LinearLayout>
         </LinearLayout>
