--- a/LocMessApp/app/src/main/res/layout/content_create_post.xml
+++ b/LocMessApp/app/src/main/res/layout/content_create_post.xml
@@ -57,11 +57,13 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp">
-            <EditText android:id="@+id/input_contact"
+
+            <EditText
+                android:id="@+id/input_contact"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/contact"
-                android:inputType="textPersonName" />
+                android:inputType="textEmailAddress" />
         </android.support.design.widget.TextInputLayout>
 
         <!-- Time Label -->
