--- a/LocMessApp/app/src/main/res/layout/dialog_new_post.xml
+++ b/LocMessApp/app/src/main/res/layout/dialog_new_post.xml
@@ -137,6 +137,7 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
