--- a/LocMessApp/app/src/main/res/layout/profile_content.xml
+++ b/LocMessApp/app/src/main/res/layout/profile_content.xml
@@ -30,13 +30,15 @@
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:src="@drawable/ic_account_circle_black_24dp" />
+
         <TextView
-            android:layout_marginTop="80dp"
-            android:layout_margin="80dp"
+            android:id="@+id/username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="80dp"
+            android:layout_marginTop="80dp"
             android:text="NOME"
-            android:textSize="20dp"/>
+            android:textSize="20dp" />
 
         <android.support.design.widget.TabLayout
             android:layout_height="wrap_content"
