--- a/LocMessApp/app/src/main/res/layout/profile_content.xml
+++ b/LocMessApp/app/src/main/res/layout/profile_content.xml
@@ -32,7 +32,7 @@
             android:src="@drawable/ic_account_circle_black_24dp" />
 
         <TextView
-            android:id="@+id/username"
+            android:id="@+id/token"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="80dp"
