--- a/LocMessApp/app/src/main/res/layout/my_posts_list_group.xml
+++ b/LocMessApp/app/src/main/res/layout/my_posts_list_group.xml
@@ -5,27 +5,29 @@
     android:orientation="horizontal"
     android:gravity="center_vertical">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-    <TextView
-        android:id="@+id/text1"
-        android:textSize="15dp"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_marginLeft="95dp"
-        android:gravity="center_vertical"
-        android:text="TextView"
-        android:textColor ="#000000"/>
-
-    <Button android:id="@+id/button1"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="95dp"
-        android:focusable="false"
-        android:text="Delete"
-        android:layout_alignParentRight="true"/>
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/text1"
+            android:textSize="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="35dp"
+            android:gravity="center_vertical"
+            android:text="TextView"
+            android:textColor ="#000000"/>
 
-    </LinearLayout>
+        <Button android:id="@+id/button1"
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginLeft="95dp"
+            android:focusable="false"
+            android:text="Delete" />
+
+    </RelativeLayout>
 
 </RelativeLayout>
