--- a/LocMessApp/app/src/main/res/layout/profile_content.xml
+++ b/LocMessApp/app/src/main/res/layout/profile_content.xml
@@ -32,12 +32,11 @@
             android:src="@drawable/ic_account_circle_black_24dp" />
 
         <TextView
-            android:id="@+id/token"
+            android:id="@+id/username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="80dp"
             android:layout_marginTop="80dp"
-            android:text="NOME"
             android:textSize="20dp" />
 
         <android.support.design.widget.TabLayout
