--- a/LocMessApp/app/src/main/res/layout/list_group.xml
+++ b/LocMessApp/app/src/main/res/layout/list_group.xml
@@ -26,9 +26,10 @@
             android:id="@+id/imageView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:scaleType="center"
-            android:padding="16dp"
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp"
+            android:paddingRight="16dp"
             app:srcCompat="@drawable/ic_place_black_24dp" />
     </LinearLayout>
 
